--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -41,6 +42,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "factory.ts": "^1.4.1",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
     "prisma": "^4.16.2",
