--- a/app/package.json
+++ b/app/package.json
@@ -24,9 +24,11 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-maps": "^3.0.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-simple-maps": "^3.0.0",
     "prettier": "^3.0.0"
   }
 }
