chore: Add turbo repo and reconfig docker-compose

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "docker:compose:stop": "docker compose stop",
+    "prisma:generate": "bash -c \"docker compose up --detach && eval $(cat envs/development.env) prisma generate\"",
+    "start:dev": "bash -c \"docker compose up --detach && eval $(cat envs/development.env) nest start --watch\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,8 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
