--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
