--- a/server/envs/development.env
+++ b/server/envs/development.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:postgres@172.17.92.225:5432/postgres?schema=public
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres?schema=public
 PORT=3001
