--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "docker:compose:stop": "docker compose stop",
-    "prisma:generate": "bash -c \"docker compose up --detach && eval $(cat envs/development.env) prisma generate\"",
-    "start:dev": "bash -c \"docker compose up --detach && eval $(cat envs/development.env) nest start --watch\"",
+    "prisma:generate": "docker compose up --detach && eval $(cat envs/development.env) prisma generate",
+    "start:dev": "docker compose up --detach && eval $(cat envs/development.env) nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
