--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,12 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@mui/x-date-pickers": "^6.9.2",
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
@@ -32,6 +35,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react-simple-maps": "^3.0.0",
     "prettier": "^3.0.0"
   }
