--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "docker:compose:stop": "docker compose stop",
-    "prisma:generate": "docker compose up --detach && eval $(cat envs/development.env) prisma generate",
-    "start:dev": "docker compose up --detach && eval $(cat envs/development.env) nest start --watch",
+    "prisma:generate": "docker compose up --detach && eval $(cat envs/development.env) prisma generate && eval $(cat envs/development.env) prisma db seed",
+    "start:dev": "bash -c \"docker compose up --detach && eval $(cat envs/development.env) nest start --watch\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -20,6 +20,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma",
+    "seed": "npx ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
