--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^6.9.2",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -28,6 +29,7 @@
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "lodash": "^4.17.21",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
