--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "wetbat-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "docker:compose:stop": "docker compose stop",
-    "prisma:generate": "docker compose up --detach && eval $(cat envs/development.env) prisma generate && eval $(cat envs/development.env) prisma db seed",
-    "start:dev": "bash -c \"docker compose up --detach && eval $(cat envs/development.env) nest start --watch\"",
+    "prisma:generate": "docker compose up --detach && eval $(cat envs/development.env) prisma generate && eval $(cat envs/development.env) npx prisma migrate dev && eval $(cat envs/development.env) prisma db seed",
+    "start:dev": "docker compose up --detach && eval $(cat envs/development.env) nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -36,7 +36,8 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "webpack": "^5.88.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
